@@ -1273,43 +1273,6 @@ argument_list|,
 literal|true
 argument_list|)
 decl_stmt|;
-name|List
-argument_list|<
-name|String
-argument_list|>
-name|liveNodes
-init|=
-name|zkClient
-operator|.
-name|getChildren
-argument_list|(
-name|LIVE_NODES_ZKNODE
-argument_list|,
-name|this
-argument_list|,
-literal|true
-argument_list|)
-decl_stmt|;
-name|Set
-argument_list|<
-name|String
-argument_list|>
-name|liveNodesSet
-init|=
-operator|new
-name|HashSet
-argument_list|<
-name|String
-argument_list|>
-argument_list|()
-decl_stmt|;
-name|liveNodesSet
-operator|.
-name|addAll
-argument_list|(
-name|liveNodes
-argument_list|)
-expr_stmt|;
 name|Set
 argument_list|<
 name|String
